# secure-notes-app

./: CLAUDE.md  Cargo.toml  README.md  build.rs  clean.md  install.ps1  uninstall.ps1
.claude/: settings.local.json
src/: app.rs  main.rs
src/app/: helpers.rs  message.rs  mod.rs  persistence.rs  state.rs  update.rs  update_data.rs  update_editor.rs  update_ui.rs  update_vault.rs  view.rs  view_overlays.rs
src/crypto/: encryption.rs  key_derivation.rs  mod.rs  secure_memory.rs
src/db/: files.rs  folders.rs  mod.rs  notes.rs  schema.rs
src/models/: file_entry.rs  folder.rs  mod.rs  note.rs  vault.rs
src/ui/: canvas_editor.rs  color_picker.rs  create_dialog.rs  editor.rs  empty_state.rs  file_vault.rs  file_viewer.rs  graph_view.rs  icons.rs  line_editor.rs  md_highlight.rs  md_widget.rs  mod.rs  notes_list.rs  password_editor.rs  settings_view.rs  tags_panel.rs  theme.rs
src/ui/dialog/: confirm_dialog.rs  folder_dialog.rs  mod.rs  password_dialog.rs
