[package]
name = "notes-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
iced = { version = "0.13", features = ["tokio", "svg", "image", "canvas", "multi-window", "markdown", "highlighter", "advanced"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["time"] }

# Clipboard (image support)
arboard = "3"

# File dialogs
rfd = "0.15"

# Open URLs in default browser
open = "5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
base64 = "0.22"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
